objects/LH__LH_Queue__c.object
<CustomObject>
    <description>Management of overflow asynchronous jobs in Lookup Helper.</description>
    <fields>
        <fullName>LH__Batch_Class__c</fullName>
        <label>Batch Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Step_Class__c</fullName>
        <label>Step Class</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Step_JSON__c</fullName>
        <label>Step JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lookup Queue</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Lookup Helper Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>